Resolves #7: add JWT Authentication
